2012-07-17  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/AbstractRenderer.java
    Remove use of BooleanUtilities throughout.

2012-07-12  David Gilbert <david.gilbert@object-refinery.com>

    (from Leo Leung)
    * org/jfree/chart/LocalisationBundle_ja.properties:
    Updated translations.

2012-07-05  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/encoders/ImageEncoderFactory.java
    (encoders): Change type to Map,
    (init) : Remove JDK 1.3 specific code.

2012-07-05  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/ChartPanel.java
    (setMouseWheelEnabled): Remove reflection only needed for JRE 1.3.1.

2012-07-02  David Gilbert <david.gilbert@object-refinery.com>

    Translations by Leo Leung:
    * org/jfree/chart/LocalisationBundle_ja.properties: New translation file;
    * org/jfree/chart/editor/LocalisationBundle_ja.properties: Likewise;
    * org/jfree/chart/plot/LocalisationBundle_ja.properties: Likewise.

2012-07-01  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/plot/PiePlot.java
    (drawSimpleLabels): Generate label once only (DG);

2012-07-01  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3521736 (optimisation)
    * org/jfree/chart/renderer/xy/DeviationRenderer.java
    (drawItem): Provide initial capacity for GeneralPath.

2012-06-11  David Gilbert <david.gilbert@object-refinery.com>

    Patch 3204823 by DaveLaw
    * org/jfree/chart/plot/PiePlot3D.java
    (drawSide): Use new PaintAlpha class,
    * org/jfree/chart/renderer/category/BarRenderer3D.java
    (drawItem): Likewise,
    * org/jfree/chart/renderer/category/StackedBarRenderer3D.java
    (drawStackHorizontal): Likewise,
    (drawStackVertical): Likewise,
    * org/jfree/chart/util/PaintAlpha.java: New class.

2012-05-10  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/xy/XYBarRenderer.java