@@ -1,7 +1,9 @@
 2012-07-17  David Gilbert <david.gilbert@object-refinery.com>
 
     * org/jfree/chart/renderer/AbstractRenderer.java
-    Remove use of BooleanUtilities throughout.
+    Remove use of BooleanUtilities throughout;
+    * org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
+    Likewise.
 
 2012-07-12  David Gilbert <david.gilbert@object-refinery.com>
 
